# Embedd-dev

./: README.md
embedded-dev-flow/: .env  pyproject.toml
embedded-dev-flow/src/embedded_dev_flow/: main.py  models.py
embedded-dev-flow/src/embedded_dev_flow/crews/codegen_crew/: codegen_crew.py
embedded-dev-flow/src/embedded_dev_flow/crews/codegen_crew/config/: agents.yaml  tasks.yaml
embedded-dev-flow/src/embedded_dev_flow/crews/design_crew/: design_crew.py
embedded-dev-flow/src/embedded_dev_flow/crews/design_crew/config/: agents.yaml  tasks.yaml
embedded-dev-flow/src/embedded_dev_flow/crews/requirements_crew/: requirements_crew.py
embedded-dev-flow/src/embedded_dev_flow/crews/requirements_crew/config/: agents.yaml  tasks.yaml
embedded-dev-flow/src/embedded_dev_flow/crews/review_crew/: review_crew.py
embedded-dev-flow/src/embedded_dev_flow/crews/review_crew/config/: agents.yaml  tasks.yaml
embedded-dev-flow/src/embedded_dev_flow/tools/: __init__.py  _graph_client.py  code_search_tool.py  get_snippet_tool.py  list_api_tool.py  query_graph_tool.py
