[project]
name = "embedded-dev-flow"
version = "0.1.0"
description = "AI-driven embedded C development pipeline using crewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.10.0",
    "code-graph-builder",
]

[project.scripts]
kickoff = "embedded_dev_flow.main:kickoff"
plot = "embedded_dev_flow.main:plot"

[tool.uv.sources]
code-graph-builder = { path = "../CodeGraphWiki", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedded_dev_flow"]
